@startuml

title __MESSAGECONTROLMODULE's Class Diagram__\n

  namespace ModerationModule {
    namespace MessageControlModule {
      class ModerationModule.MessageControlModule.LockCommand {
          - helpText : String
          - perm : Permission
          + LockCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace MessageControlModule {
      class ModerationModule.MessageControlModule.MuteCommand {
          ~ muteRoleName : String
          - helpText : String
          - perm : Permission
          + MuteCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace MessageControlModule {
      class ModerationModule.MessageControlModule.PruneCommand {
          - helpText : String
          - perm : Permission
          + PruneCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace MessageControlModule {
      class ModerationModule.MessageControlModule.UnlockCommand {
          - helpText : String
          - perm : Permission
          + UnlockCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  ModerationModule.MessageControlModule.LockCommand -up-|> ModerationModule.ModCommand
  ModerationModule.MessageControlModule.MuteCommand -up-|> ModerationModule.ModCommand
  ModerationModule.MessageControlModule.PruneCommand -up-|> ModerationModule.ModCommand
  ModerationModule.MessageControlModule.UnlockCommand -up-|> ModerationModule.ModCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
